# localhttps

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker.yml
localhttps/: __init__.py  app.py  cmd.py
localhttps/cert/: __init__.py  ca.py  cert.py
localhttps/cli/: __init__.py  context.py
localhttps/cli/commands/: __init__.py  init.py  secure.py  status.py  unsecure.py  use.py
localhttps/keychain/: __init__.py  abc.py  linux.py  macos.py
localhttps/utils/: cli.py  domain.py
